feat: add stdev into diagrams

--- a/appendix.tex
+++ b/appendix.tex
@@ -1,35 +1,33 @@
+
+\section{Článok prezentovaný na IIT.SRC2014} % (fold)
+\label{sec:_l_nok_prezentovan_na_iit_src2014}
+
+% section _l_nok_prezentovan_na_iit_src2014 (end)
+
+\newpage
+
 \section{Obsah CD nosiča} % (fold)
 \label{sec:obsah_cd_nosi_a}
 K práci je priložené CD, na ktorom sa nachádzajú implementované moduly spolu s demonštračnými aplikáciami a dokumentácia. Jeho súborová štruktúra je nasledujúca:
 
 \begin{itemize}
   \item \textbf{/angular-adaptive/}\\
-    implementované moduly
-  \item \textbf{/angular-adaptive/adaptive-speech/}\\
-    modul na ovládanie aplikácie pomocou reči\\
-    \url{https://github.com/angular-adaptive/adaptive-speech}
-  \item \textbf{/angular-adaptive/adaptive-scroll/}\\
-    modul na ovládanie aplikácie pomocou gyroscopu\\
-    \url{https://github.com/angular-adaptive/adaptive-scroll}
-  \item \textbf{/angular-adaptive/adaptive-motion/}\\
-    modul na ovládanie aplikácie pomocou pohybu\\
-    \url{https://github.com/angular-adaptive/adaptive-motion}
-  \item \textbf{/angular-adaptive/adaptive-detection/}\\
-    modul na detekovanie zariadenia\\
-    \url{https://github.com/angular-adaptive/adaptive-detection}
-  \item \textbf{/angular-adaptive/adaptive-googlemaps/}\\
-    webový komponent google máp\\
-    \url{https://github.com/angular-adaptive/adaptive-googlemaps}
-  \item \textbf{/angular-adaptive/angular-adaptive.github.io/}\\
-    webová stránka projektu\\
-    \url{https://github.com/angular-adaptive/angular-adaptive.github.io}
+    implementované moduly spolu s technickou dokumentáciou a inštalačnou príručkou
 
   \item \textbf{/Gyrocopter/}\\
-    extension na emulovanie gyroskopu do Chrome Developer Tools\\
+    rozšírenie do Chrome Developer Tools na emulovanie gyroskopu\\
     \url{https://github.com/janantala/Gyrocopter}
 
-  \item \textbf{/Dokumentacia/}\\
+  \item \textbf{/speech-synthesis/}\\
+    polyfill na syntézu reči spolu s technickou dokumentáciou a inštalačnou príručkou\\
+    \url{https://github.com/janantala/speech-synthesis}
+
+  \item \textbf{/Dokument/}\\
     dokument a anotácie v slovenskom a anglickom jazyku
+
+  \item \textbf{/IIT.SRC2014/}\\
+    článok prezentovaný na IIT.SRC2014
+
 \end{itemize}
 
 % section obsah_cd_nosi_a (end)
