--- a/intro.tex
+++ b/intro.tex
@@ -52,7 +52,7 @@ Fakulta informatiky a informačných technológií
 \large{Miesto vypracovania:  Ústav aplikovanej informatiky, FIIT STU, Bratislava} \\
 \large{Vedúci práce: doc. Ing. Michal Čerňanský PhD.} \\
 \vspace{1.0cm}
-\large{december 2013} \\
+\large{máj 2014} \\
 \end{flushleft}
 
 
@@ -84,7 +84,7 @@ FAKULTA INFORMATIKY A INFORMAČNÝCH TECHNOLÓGII\\
 Autor: Bc. Ján Antala\\
 Diplomová práca: Adaptívny web dizajn.\\ 
 Vedúci diplomovej práce: doc. Ing. Michal Čerňanský PhD. \\
-December, 2013
+Máj, 2014
 \newline
 
 Používanie mobilných zariadení rapídne rastie a tie so sebou prinášajú nie len rôzne veľkosti displejov a nové interakčné spôsoby, ale aj nové druhy pripojenia na internet. Ale na web nemajú prístup len smartfóny a klasické počítače. Sú tu smartfóny, tablety, e-čítačky, netbooky, hodinky, televízie, phablety, herné konzoly a množstvo ďalších. Je preto nevyhnutné prispôsobiť webové stránky rôznym zariadeniam a novým trendom v oblasti interakcie.
@@ -104,7 +104,7 @@ Degree Course: INFORMATION SYSTEMS
 Author: Bc. Ján Antala\\
 Diploma Thesis: Adaptive web design. \\
 Supervisor: doc. Ing. Michal Čerňanský PhD. \\
-2013, December
+2014, May
 \newline
 
 Mobile device penetration grows rapidly and it brings not only different display sizes with new human interaction methods, but also new kinds of internet connection. But there are not just smartphones and desktop computers. We now have Web-enabled smartphones, tablets, e-readers, netbooks, watches, TVs, phablets, notebooks, game consoles and more. So it is necessary to adapt web pages for different devices and new interaction methods. In our work, we follow Mobile First and Progressive Enhancement design, which emphasises a great performance on mobile devices and later profit on high-end computers. We present a new way of web components adaptation based on a device features and external conditions in our work and new possibilities of interaction with web application based on speech recognition, motion or device rotation. The evaluation of the proposed method of adaptation shows slightly better results than original approach.
@@ -119,7 +119,7 @@ Mobile device penetration grows rapidly and it brings not only different display
 Čestne prehlasujem, že záverečnú prácu som vypracoval samostatne, s použitím uvedenej
 literatúry a na základe svojich vedomostí a znalostí.
 \newline\newline
-\noindent Bratislava, december 2013 \hfil
+\noindent Bratislava, máj 2014 \hfil
 \begin{tabular}[t]{c}
 \hbox to 50mm {\dotfill} \\ \textit{\small Vlastnoručný podpis}
 \end{tabular}\qquad\linebreak
