--- a/bib.bib
+++ b/bib.bib
@@ -433,4 +433,61 @@ year = {2013},
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {accelerometer, gesture recognition, gyroscope, mobile, motion gestures, sensor fusion},
-}  
+} 
+
+@inproceedings{ultrabooks, 
+author = {Luke Wroblewski},
+title = {Device Motion},
+booktitle = {Re-imagining Apps for Ultrabook},
+publisher = {Intel Software},
+year = {2013}
+}
+
+@conference{adaptiveinput,
+author = {Jason Grigsby},
+title = {Adaptive Input},
+booktitle = {Breaking Development},
+address = {San Diego, CA, USA},
+year = {July 22-24, 2013}
+}
+
+@conference{ui17,
+author = {Aaron Gustafson},
+title = {Building Adaptive Designs Now},
+booktitle = {User Interface 17 Conference},
+address = {Boston, MA, USA},
+year = {November 5-7, 2012}
+} 
+
+
+@conference{20mb,
+author = {Mat Marquis},
+title = {20MB Responsive Websites},
+booktitle = {Breaking Development},
+address = {Orlando, FL, USA},
+year = {April 8-10, 2013}
+}
+
+@conference{designingfortouch,
+author = {Josh Clark},
+title = {Designing for Touch},
+booktitle = {An Event Apart},
+address = {Seattle, WA, USA},
+year = {April 1-3, 2013}
+}
+
+@conference{OptimizingtheCriticalRenderingPath,
+author = {Ilya Grigorik},
+title = {Optimizing the Critical Rendering Path},
+booktitle = {Breaking Development},
+address = {San Diego, CA, USA},
+year = {July 22-24, 2013}
+}
+
+@conference{pagespeed,
+author = {Peter McLachlan},
+title = {Page Speed is Only the Beginning},
+booktitle = {Breaking Development},
+address = {San Diego, CA, USA},
+year = {July 22-24, 2013}
+}
