refactor: use better titles

--- a/appendix.tex
+++ b/appendix.tex
@@ -5,7 +5,6 @@
 % section _l_nok_prezentovan_na_iit_src2014 (end)
 
 \newpage
-
 \section{Obsah CD nosiča} % (fold)
 \label{sec:obsah_cd_nosi_a}
 K práci je priložené CD, na ktorom sa nachádzajú implementované moduly spolu s demonštračnými aplikáciami a dokumentácia. Jeho súborová štruktúra je nasledujúca:
@@ -31,3 +30,9 @@ K práci je priložené CD, na ktorom sa nachádzajú implementované moduly spo
 \end{itemize}
 
 % section obsah_cd_nosi_a (end)
+
+\newpage
+\section{Technická dokumentácia a inštalačná príručka} % (fold)
+\label{sec:technick_dokument_cia_a_in_tala_n_pr_ru_ka}
+
+% section technick_dokument_cia_a_in_tala_n_pr_ru_ka (end)
