--- a/document.tex
+++ b/document.tex
@@ -47,6 +47,8 @@
 \usepackage[stable]{footmisc}
 \captionsetup{justification=centering}
 
+\usepackage{pdfpages}
+
 \selectlanguage{slovak}
 \usepackage[numbers]{natbib}
 \usepackage[titletoc]{appendix}
