refactor: update anotations and appendices

--- a/appendix.tex
+++ b/appendix.tex
@@ -62,6 +62,8 @@ K práci je priložené CD, na ktorom sa nachádzajú implementované moduly spo
 \section{Článok prezentovaný na IIT.SRC2014} % (fold)
 \label{sec:_l_nok_prezentovan_na_iit_src2014}
 
+Na základe našej práce sme zároveň vytvorili odborný článok a prezentovali ho na konferencii IIT.SRC 2014 pod názvom ,,Beyond Adaptive Web Design''. V prílohe prinášame jeho plnú verziu.
+
 \includepdf[pages={1,2,3,4,5,6,7},scale=1.0]{appendices/paper.pdf}
 
 % section _l_nok_prezentovan_na_iit_src2014 (end)
