feat: final document

--- a/intro.tex
+++ b/intro.tex
@@ -19,7 +19,7 @@ Fakulta informatiky a informačných technológií
 
 \vspace*{1.0cm}
 \begin{Large}
-% \textmd{FIIT-5212-64295}
+\textmd{FIIT-5208-64295}
 \end{Large}
 
 %\vglue-0.3cm
